Port 'fly config' to internal/command/config

--- a/genqlient.yaml
+++ b/genqlient.yaml
@@ -4,7 +4,7 @@ schema: gql/schema.graphql
 operations:
   - agent/**.go
   - api/**.go
-  - cmd/config.go
+  - internal/appconfig/*.go
   - internal/command/**/*.go
   - internal/command/**/**/*.go
   - internal/build/imgsrc/*.go
