Only sync docs when a successful release happens, hopefully preventing Github API rate limit issues

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -140,6 +140,7 @@ jobs:
           name: checksums
           path: dist/checksums.txt
   sync_docs:
+    needs: release
     runs-on: ubuntu-latest
     if: ${{ github.ref == 'refs/heads/master' }}
     steps:
