bundle exec rackup for better results

--- a/scanner/templates/ruby/Dockerfile
+++ b/scanner/templates/ruby/Dockerfile
@@ -37,4 +37,4 @@ COPY . .
 
 # Start the server
 EXPOSE 8080
-CMD ["rackup", "--host", "0.0.0.0", "--port", "8080"]
+CMD ["bundle", "exec", "rackup", "--host", "0.0.0.0", "--port", "8080"]
