--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,11 +8,21 @@ repos:
     -   id: end-of-file-fixer
     -   id: check-yaml
     -   id: check-added-large-files
+
+-   repo: https://github.com/tekwizely/pre-commit-golang
+    rev: v1.0.0-rc.1
+    hooks:
+    -   id: go-mod-tidy
+
+# NOTE: This pre-commit hook is ignored when running on Github Workflow
+# because goalngci-lint github action is much more useful than the pre-commit action.
+# The trick is to run github action only for "manual" hook stage
 -   repo: https://github.com/golangci/golangci-lint
     rev: v1.51.2
     hooks:
     -   id: golangci-lint
-        # pre-commit github action runs as "manual" hook
-        # because golangci-lint's action is more useful than
-        # the pre-commit hook in that case
         stages: [commit]
+    -   id: golangci-lint
+        name: "golangci-lint api"
+        stages: [commit]
+        entry: bash -c "cd api && exec golangci-lint run --new-from-rev HEAD --fix"
