--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -10,24 +10,27 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-go@v3
+      - uses: actions/setup-go@v4
         with:
           go-version-file: "go.mod"
       - uses: pre-commit/action@v3.0.0
         with:
           extra_args: --all-files --hook-stage=manual
-      - uses: golangci/golangci-lint-action@master
+      - uses: golangci/golangci-lint-action@v3
         with:
-          version: v1.51.2
+          version: v1.52
+          # https://github.com/golangci/golangci-lint-action/issues/244
+          # precommit step already run go get and conflicts with golangci cache
+          skip-cache: true
 
   lint-api:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-go@v3
+      - uses: actions/setup-go@v4
         with:
           go-version-file: "api/go.mod"
-      - uses: golangci/golangci-lint-action@master
+      - uses: golangci/golangci-lint-action@v3
         with:
-          version: v1.51.2
+          version: v1.52
           working-directory: "api"
