--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,7 +6,7 @@ on:
 jobs:
   test_build:
     runs-on: ubuntu-latest
-    #if: ${{ github.ref == 'refs/heads/master' || github.event_name == 'workflow_dispatch' }}
+    if: ${{ github.ref == 'refs/heads/master' || github.event_name == 'workflow_dispatch' }}
     steps:
       - uses: actions/checkout@v3
         with:
