Add option for manually running the homebrew bump job

--- a/.github/workflows/homebrew_bump.yml
+++ b/.github/workflows/homebrew_bump.yml
@@ -2,6 +2,13 @@ name: Homebrew Bump Formula
 on:
   schedule:
     - cron: '23 17 * * *'
+  workflow_dispatch:
+    inputs:
+      reason:
+        description: Brief reason for running this workflow manually
+        required: false
+        default: not specified by user
+        type: string
 
 jobs:
   homebrew:
