--- a/scanner/templates/remix/Dockerfile
+++ b/scanner/templates/remix/Dockerfile
@@ -2,7 +2,9 @@
 FROM node:16-bullseye-slim as base
 
 # Install openssl for Prisma
-RUN apt-get update && apt-get install -y openssl
+# RUN apt-get update && apt-get install -y openssl
+
+ENV NODE_ENV production
 
 # Install all node_modules, including dev dependencies
 FROM base as deps
@@ -26,8 +28,6 @@ RUN npm prune --production
 # Build the app
 FROM base as build
 
-ENV NODE_ENV=production
-
 RUN mkdir /app
 WORKDIR /app
 
@@ -43,18 +43,17 @@ RUN npm run build
 # Finally, build the production image with minimal footprint
 FROM base
 
-ENV NODE_ENV=production
+ENV NODE_ENV production
 
 RUN mkdir /app
 WORKDIR /app
 
 COPY --from=production-deps /app/node_modules /app/node_modules
-
 # Uncomment if using Prisma
 # COPY --from=build /app/node_modules/.prisma /app/node_modules/.prisma
-
 COPY --from=build /app/build /app/build
 COPY --from=build /app/public /app/public
 ADD . .
 
+ENV PORT 8080
 CMD ["npm", "run", "start"]
