[django] Detect and support pipenv and poetry

--- a/scanner/templates/django/Dockerfile
+++ b/scanner/templates/django/Dockerfile
@@ -8,19 +8,27 @@ ENV PYTHONUNBUFFERED 1
 RUN mkdir -p /code
 
 WORKDIR /code
-
+{{ if .pipenv }}
+RUN pip install pipenv
+COPY Pipfile Pipfile.lock /code/
+RUN pipenv install --deploy --system
+{{ else if .poetry }}
+RUN pip install poetry
+COPY pyproject.toml poetry.lock /code/
+RUN poetry config virtualenvs.create false
+RUN poetry install --only main --no-root --no-interaction
+{{ else }}
 COPY requirements.txt /tmp/requirements.txt
-
 RUN set -ex && \
     pip install --upgrade pip && \
     pip install -r /tmp/requirements.txt && \
     rm -rf /root/.cache/
-
-COPY . /code/
+{{ end }}
+COPY . /code
 
 RUN python manage.py collectstatic --noinput
 
 EXPOSE 8000
 
-# replace demo.wsgi with <project_name>.wsgi
+# TODO: replace demo.wsgi with <project_name>.wsgi
 CMD ["gunicorn", "--bind", ":8000", "--workers", "2", "demo.wsgi"]
