--- a/scanner/templates/django/Dockerfile
+++ b/scanner/templates/django/Dockerfile
@@ -27,9 +27,9 @@ RUN set -ex && \
 {{ end -}}
 
 COPY . /code
-
+{{ if .collectStatic }}
 RUN python manage.py collectstatic --noinput
-
+{{ end }}
 EXPOSE 8000
 
 {{ if .wsgiFound -}}
