--- a/internal/appconfig/testdata/tomachine-services.toml
+++ b/internal/appconfig/testdata/tomachine-services.toml
@@ -4,18 +4,31 @@ primary_region = "scl"
 [http_service]
   internal_port = 8080
   force_https = true
-  autoscaled = true
+  auto_start_machines = true
+  auto_stop_machines = true
 
 [[services]]
   protocol = "tcp"
-  internal_port = 9999
-  autoscaled = true
-
-[[services]]
-  protocol = "udp"
   internal_port = 1000
-  autoscaled = false
+  auto_start_machines = true
+  auto_stop_machines = true
 
 [[services]]
-  protocol = "udp"
-  internal_port = 2000
+  protocol = "tcp"
+  internal_port = 1001
+  auto_start_machines = false
+  auto_stop_machines = false
+
+[[services]]
+  protocol = "tcp"
+  internal_port = 1002
+  auto_start_machines = false
+
+[[services]]
+  protocol = "tcp"
+  internal_port = 1003
+  auto_stop_machines = true
+
+[[services]]
+  protocol = "tcp"
+  internal_port = 1004
