[django] Detect multiple settings files; Check or create a random SECRET_KEY on Dockerfile

--- a/scanner/templates/django/Dockerfile
+++ b/scanner/templates/django/Dockerfile
@@ -28,6 +28,9 @@ RUN set -ex && \
 
 COPY . /code
 {{ if .collectStatic }}
+{{ if not .hasRandomSecretKey -}}
+ENV SECRET_KEY "{{ .randomSecretKey }}"
+{{ end -}}
 RUN python manage.py collectstatic --noinput
 {{ end }}
 EXPOSE 8000
