Add test case for http_options.compress

--- a/internal/appconfig/testdata/services-ports.toml
+++ b/internal/appconfig/testdata/services-ports.toml
@@ -8,6 +8,9 @@ app = "foo"
     port = 80
 
   # https://community.fly.io/t/new-feature-basic-http-response-header-modification/3594
+  [services.ports.http_options]
+    compress = true
+
   [services.ports.http_options.response.headers]
     fly-request-id = false
     fly-wasnt-here = "yes, it was"
