Detect python version to be used on the Dockerfile

--- a/scanner/templates/django/Dockerfile
+++ b/scanner/templates/django/Dockerfile
@@ -1,4 +1,7 @@
-ARG PYTHON_VERSION=3.10-slim-buster
+{{ if not .pythonVersionFound -}}
+# TODO: make sure you update your application to use Python v3.10 or update the image that is compatible
+{{ end -}}
+ARG PYTHON_VERSION={{ .pythonVersion }}-slim-buster
 
 FROM python:${PYTHON_VERSION}
 
