--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -88,7 +88,7 @@ jobs:
   sync_docs:
     needs: release
     runs-on: ubuntu-latest
-    if: ${{ github.ref == 'refs/heads/master' }}
+    if: ${{ !contains(github.ref, 'pre') }}
     steps:
       - name: Checkout flyctl
         uses: actions/checkout@v3
