--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -45,6 +45,27 @@ jobs:
       - name: Run tests
         run: make test
 
+  preflight:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-go@v4
+        with:
+          go-version-file: "go.mod"
+          check-latest: true
+      - name: Get go version
+        id: go-version
+        run: echo "name=version::$(go env GOVERSION)" >> $GITHUB_OUTPUT
+      - name: go mod download
+        run: go mod download
+      - name: go mod verify
+        run: go mod verify
+      - name: generate command strings
+        run: go generate ./... && git diff --exit-code
+      - name: "Place wintun.dll"
+        run: cp deps/wintun/bin/amd64/wintun.dll ./
+      - run: make ci-preflight
+
   release:
     needs: test
     if: startsWith(github.ref, 'refs/tags/v') && !contains(github.ref, 'dev-')
