--- a/.golangci.yml
+++ b/.golangci.yml
@@ -123,3 +123,11 @@ linters-settings:
     # path to a file containing a list of functions to exclude from checking
     # see https://github.com/kisielk/errcheck#excluding-functions for details
     #exclude: /path/to/file.txt
+  govet:
+    settings:
+      printf:
+        funcs:
+          - github.com/superfly/flyctl/terminal.Debugf
+          - github.com/superfly/flyctl/terminal.Infof
+          - github.com/superfly/flyctl/terminal.Warnf
+          - github.com/superfly/flyctl/terminal.Errorf
