--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -102,10 +102,16 @@ jobs:
         with:
           go-version-file: "go.mod"
           check-latest: true
+      - uses: jnwng/github-app-installation-token-action@778da2ab509f3ef5e4b902bc15daf25ef3e34939
+        id: installationToken
+        with:
+          appId: 339363
+          installationId: 37947271
+          privateKey: ${{ secrets.DOCS_SYNCER_GITHUB_APP_PRIVATE_KEY }}
       - name: Publish CLI docs
         id: publish-cli-docs
         env:
-          GITHUB_TOKEN: ${{ secrets.DOCS_GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ steps.installationToken.outputs.token }}
         run: scripts/publish_docs.sh ${{ github.ref_name }}
 
   dev_release:
