use github bot token for docs checkout too

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -92,22 +92,22 @@ jobs:
     steps:
       - name: Checkout flyctl
         uses: actions/checkout@v3
-      - name: Checkout docs
-        uses: actions/checkout@v3
-        with:
-          repository: superfly/docs
-          token: ${{ secrets.DOCS_GITHUB_TOKEN }}
-          path: docs
-      - uses: actions/setup-go@v4
-        with:
-          go-version-file: "go.mod"
-          check-latest: true
       - uses: jnwng/github-app-installation-token-action@778da2ab509f3ef5e4b902bc15daf25ef3e34939
         id: installationToken
         with:
           appId: 339363
           installationId: 37947271
           privateKey: ${{ secrets.DOCS_SYNCER_GITHUB_APP_PRIVATE_KEY }}
+      - name: Checkout docs
+        uses: actions/checkout@v3
+        with:
+          repository: superfly/docs
+          token: ${{ steps.installationToken.outputs.token }}
+          path: docs
+      - uses: actions/setup-go@v4
+        with:
+          go-version-file: "go.mod"
+          check-latest: true
       - name: Publish CLI docs
         id: publish-cli-docs
         env:
