--- a/.github/workflows/preflight.yml
+++ b/.github/workflows/preflight.yml
@@ -32,3 +32,11 @@ jobs:
           FLY_PREFLIGHT_TEST_FLY_ORG: flyctl-ci-preflight
           FLY_PREFLIGHT_TEST_FLY_REGIONS: iad bom syd
         run: make ci-preflight
+      - uses: superfly/flyctl-actions/setup-flyctl@master
+        if: always()
+      - name: Clean up any un-deleted preflight apps
+        if: always()
+        env:
+          FLY_API_TOKEN: ${{ secrets.FLYCTL_PREFLIGHT_CI_FLY_API_TOKEN }}
+          FLY_PREFLIGHT_TEST_FLY_ORG: flyctl-ci-preflight
+        run: ./scripts/delete_preflight_apps.sh
