only use two regions for now

--- a/.github/workflows/preflight.yml
+++ b/.github/workflows/preflight.yml
@@ -30,7 +30,7 @@ jobs:
         env:
           FLY_PREFLIGHT_TEST_ACCESS_TOKEN: ${{ secrets.FLYCTL_PREFLIGHT_CI_FLY_API_TOKEN }}
           FLY_PREFLIGHT_TEST_FLY_ORG: flyctl-ci-preflight
-          FLY_PREFLIGHT_TEST_FLY_REGIONS: iad bom syd
+          FLY_PREFLIGHT_TEST_FLY_REGIONS: iad syd
         run: make ci-preflight
       - uses: superfly/flyctl-actions/setup-flyctl@master
         if: always()
